fixes font sizes and spacing

--- a/assets/style2.css
+++ b/assets/style2.css
@@ -98,8 +98,8 @@ a.title, a.title:visited {
     text-decoration: none;
     word-spacing: normal;
     position:  fixed;
-
     margin-top: 0%;
+    margin-left:  -1.5%;
 
 }
 
@@ -239,17 +239,41 @@ overflow-x: hidden;
             overflow-x: hidden;*/
                 }
 
-        ul, a.title, .nav-link, .nav-link:visited {
+a.title, a.title:visited {
+    color: #000000;
+    font: 44px 'Cinzel Decorative', serif;
+    text-align: left;
+    text-decoration: none;
+    word-spacing: normal;
+    position:  fixed;
+    margin-top: 0%;
+    margin-left:  -3%;
+
+}
+
+.nav-link, .nav-link:visited {
+    font: 18px 'Cinzel Decorative', serif;
+    color: #000000;
+    line-height: 0;
+    text-decoration: none;
+    position: relative;
+    left:  0%;
+top:  70px;
+
+
+}
+       /* ul, a.title, .nav-link, .nav-link:visited {
             font: 18px 'Cinzel Decorative', serif;
             color: #000000;
             line-height: 0;
-        /*    margin-left: 18%;*/
+            margin-left: 18%;
             text-decoration: none;
             }
 
         a.title {
             font: 30px 'Cinzel Decorative', serif;
-            margin-left: 12%;
+            margin-left: 8%;
+*/
         }
         .nav-link:hover{
             color:#8E65AC;
